# wallet-rest-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  validate.sh
.github/: FUNDING.yml
.github/instructions/: cli.instructions.md  project.instructions.md  python.instructions.md  ui.instructions.md
.github/workflows/: test.yml
src/wallet_rest_cli/: __init__.py  cli.py  client.py  filters.py
tests/: test_cli.py  test_client.py  test_filters.py
