[project]
name = "wallet-rest-cli"
version = "0.1.0"
description = "Console CLI for querying the BudgetBakers Wallet API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "typer[all]>=0.12",
]

[project.scripts]
wallet-rest-cli = "wallet_rest_cli.cli:main"

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.uv]
exclude-newer = "30 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallet_rest_cli"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check . --fix"
format = "black ."
format-check = "black --check ."
test = "pytest src tests --cov=src/wallet_rest_cli --cov-fail-under=100 -v"
typecheck = "mypy src --strict --no-incremental"
validate = ["lint", "format-check", "test", "typecheck"]
check = ["lint", "format-check", "test", "typecheck"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/wallet_rest_cli"]
omit = [
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
files = ["src"]
exclude = ["tests/"]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
